--- a/src/assets/scss/_pricing.scss
+++ b/src/assets/scss/_pricing.scss
@@ -1,5 +1,5 @@
 .pricing {
-  .nav-tabs {
+  .priceTab {
     position: absolute;
     right: 0;
     top: 0;
@@ -44,11 +44,54 @@
       }
     }
   }
+  #myTab {
+    justify-content: flex-end;
+    float: right;
+    z-index: 1;
+    width: 320px;
+    padding: 12px 0px;
+    text-align: right;
+    border: 0;
+    top: -89px;
+    margin-bottom: 0px !important;
+    background: rgba(90, 136, 213, 0.08);
+    border-radius: 10px;
+    @media screen and (max-width: 991px) {
+      position: initial;
+    }
+    button {
+      font-family: Lato;
+      font-style: normal;
+      border: 0px;
+      padding: 13px 0px;
+      font-weight: 800;
+      font-size: 16px;
+      text-align: center;
+      width: 150px;
+      line-height: 19px;
+
+      color: #000;
+      &.active {
+        background: #5433ff;
+        mix-blend-mode: normal;
+        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.11);
+        border-radius: 8px;
+        color: #fff;
+        font-family: Lato;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 19px;
+        color: #ffffff;
+      }
+    }
+  }
   position: relative;
   .card {
     background: #ffffff;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    margin-bottom:20px;
     padding: 70px 30px 40px;
     p {
       text-align: center;
@@ -58,7 +101,8 @@
       font-family: Lato;
       font-style: normal;
       font-weight: 900;
-      font-size: 50px;
+      font-size: 30px;
+      text-transform:uppercase;
       line-height: 60px;
       text-align: center;
       letter-spacing: 0.015em;
@@ -99,6 +143,7 @@
     }
   }
   ul {
+    height:100%;
     margin-top: 25px;
     li {
       font-family: Lato;
@@ -154,4 +199,45 @@
   top: 23px;
   left: 0;
   right: 0;
+}
+.Basic,
+.Premium,
+.EllipsisAI {
+  display: none;
+}
+.pricing {
+  justify-content: center;
+  width: 100%;
+  .row {
+    justify-content:center;
+    margin-top:50px;
+  }
+}
+#inr {
+  display:none;
+}
+.update {
+  background: #5433ff;
+  mix-blend-mode: normal;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.11);
+  border-radius: 8px;
+  padding: 15px 0px;
+  width: 165.62px;
+  margin: 0 auto;
+  color: #fff;
+  border: 1px solid #5433ff;
+  font-family: Lato;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  color: #ffffff;
+  &:hover {
+    background: #fff;
+    color: #5433ff;
+    transition: 0.3s ease-in;
+  }
+}
+#root {
+  overflow:hidden;
 }
