--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -605,3 +605,11 @@ button.clear {
 .jss5 {
   overflow:hidden;
 }
+.extraPage {
+  width:80%;
+  margin:0 auto;
+  padding-top: 50px;
+  @media screen and (max-width:800px) {
+    width: 90%;
+  }
+}
