--- a/src/assets/scss/_pricing.scss
+++ b/src/assets/scss/_pricing.scss
@@ -217,6 +217,8 @@
   display:none;
 }
 .update {
+  text-align: center;
+  text-decoration: none;
   background: #5433ff;
   mix-blend-mode: normal;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.11);
